first property and functions creation

--- a/bin/index.html
+++ b/bin/index.html
@@ -1,16 +1,46 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>fabric | ES6 Development Facility</title>
+  <meta charset="utf 8">
+  <title>Dommer | DOM Manipulation Tool</title>
   <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
 
-<div class="container">
-    <h1 class="fabric">Welcome to fabric (Mocha)</h1>
-    <p>Let's code!</p>
-</div>
+<nav id="navigation" class="navbar">
+  <ul class="list">
+    <li class="item">item 1</li>
+    <li class="item">item 2</li>
+    <li class="item">item 3</li>
+    <li class="item">item 4</li>
+    <li class="item">item 5</li>
+  </ul>
+</nav>
+
+<h1 class="title">This is a test</h1>
+
+<p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequuntur distinctio dolorem doloribus ducimus earum
+  error fuga, fugiat impedit incidunt itaque odit qui quod saepe, sint sit sunt unde voluptas? Culpa dolorum impedit
+  libero natus numquam, quis quisquam sed similique. Ab ad aperiam dolores dolorum excepturi exercitationem fugit
+  laudantium magnam obcaecati odio quas quibusdam quidem sed tempora, vel! Accusamus, nam!</p>
+
+<section class="main">
+  <div class="internal">internal 1</div>
+  <div class="internal">internal 2</div>
+  <div class="internal">internal 3</div>
+  <div class="internal">internal 4</div>
+  <div class="internal">internal 5</div>
+</section>
+
+<footer>
+  <ol class="ordered-list">
+    <li class="item">footer item 1</li>
+    <li class="item">footer item 2</li>
+    <li class="item">footer item 3</li>
+    <li class="item">footer item 4</li>
+    <li class="item">footer item 5</li>
+  </ol>
+</footer>
 
 <script src="js/main.js"></script>
 </body>
