helpers and modules

--- a/bin/index.html
+++ b/bin/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf 8">
-  <title>Dommer | DOM Manipulation Tool</title>
+  <title>DOMinus | DOM Manipulation Tool</title>
   <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
